--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Css-Tutorial</title>
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/play.css">
 </head>
 
 <body>
